fix: align header in the center

--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -11,11 +11,6 @@
 }
 
 .login-header {
-    position: absolute;
-
-    top: 0;
-    left: 0;
-
     padding: 20px 20px 0 20px;
 
     display: flex;
